Media Query Padding Fix
Too much padding on the bottom

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -92,7 +92,7 @@
   
   @media screen and (max-width: 768px) {
     .home__hero-text-wrapper {
-      padding-bottom: 65px;
+      padding-bottom: 30px;
     }
   
     .col {
